# fliswarm

./: .flake8  .travis.yml  CHANGELOG.md  CHANGELOG.rst  README.md  pyproject.toml  readthedocs.yml
.github/workflows/: lint.yml  release.yml  test.yml
docs/sphinx/: api.rst  changelog.md  commands.rst  conf.py  index.rst  intro.rst  requirements.txt
docs/sphinx/_static/: custom.css  fliswarm_diagram.graffle
fliswarm/: __init__.py  __main__.py  actor.py  commands.py  device.py  exceptions.py  node.py  nuc.py  tools.py
fliswarm/etc/: fliswarm.yaml
python/fliswarm/: __init__.py  cli.py  exceptions.py
tests/: conftest.py  fliswarm.yaml  test_fliswarm.py  test_main.py
