[tool.poetry]
name = "sdss-fliswarm"
version = "0.3.1"
description = "A tool to create and manage Docker instances of flicamera"
authors = ["José Sánchez-Gallego <gallegoj@uw.edu>"]
license = "BSD-3-Clause"
readme = "README.md"
homepage = "https://github.com/sdss/fliswarm"
repository = "https://github.com/sdss/fliswarm"
documentation = "https://sdss-fliswarm.readthedocs.org"
keywords = ["astronomy", "software"]
classifiers = [
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Operating System :: OS Independent",
	"Programming Language :: Python :: 3.7",
	"Programming Language :: Python :: 3.8",
	"Programming Language :: Python :: 3.9",
    "Topic :: Documentation :: Sphinx",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
packages = [
    { include = "fliswarm" }
]
include = ["fliswarm/etc/*"]

[tool.poetry.scripts]
fliswarm = "fliswarm.__main__:main"

[tool.poetry.dependencies]
python = "^3.8"
sdsstools = ">=0.4.0"
click = "^8.0.0"
docker = "^5.0.0"
sdss-clu = "^1.0.0"
click-default-group = "^1.2.2"
daemonocle = "^1.0.2"

[tool.poetry.dev-dependencies]
ipython = ">=8.0.0"
flake8 = ">=3.7.9"
doc8 = ">=0.8.0"
pytest = ">=5.2.2"
pytest-asyncio = ">=0.10.0"
pytest-cov = ">=2.8.1"
pytest-mock = ">=1.13.0"
pytest-sugar = ">=0.9.2"
isort = ">=4.3.21"
codecov = ">=2.0.15"
coverage = {version = ">=5.0", extras = ["toml"]}
ipdb = ">=0.12.3"
rstcheck = ">=3.3.1"
Sphinx = ">=3.0.0"
autopep8 = ">=1.5.4"
sphinx-click = ">=3.0.0"
sphinx-copybutton = ">=0.3.1"
black = {version = ">=21.0", allow-prereleases = true}
myst-parser = ">=0.14.0"
nox = ">=2021.6.12"
sphinx-autobuild = ">=2021.3.14"
sphinx-jsonschema = ">=1.16.11"
furo = ">=2021.9.22"

[tool.black]
line-length = 88
target-version = ['py39']
fast = true

[tool.isort]
profile = "black"
sections = ["FUTURE", "STDLIB", "TYPING", "THIRDPARTY", "SDSS", "FIRSTPARTY", "LOCALFOLDER"]
default_section = "THIRDPARTY"
known_first_party = "fliswarm"
known_typing = ["typing"]
known_sdss = ["sdsstools", "clu", "basecam", "flicamera"]
lines_after_imports = 2

[tool.pytest.ini_options]
addopts = "--cov fliswarm --cov-report xml --cov-report html --cov-report term"
filterwarnings = [
    "ignore:starting LegacyActor without Tron connection."
]

[tool.coverage.run]
branch = true
include = ["python/fliswarm/*"]
omit = [
    "*/__init__.py",
    "*/__main__.py"
]

[tool.coverage.report]
exclude_lines = [
]

[build-system]
requires = ["poetry-core>=1.1.0"]
build-backend = "poetry.core.masonry.api"
