[project]
name = "sdss-fliswarm"
version = "0.6.0"
description = "A tool to create and manage Docker instances of flicamera"
authors = [
    { name = "José Sánchez-Gallego", email = "gallegoj@uw.edu" }
]
license = "BSD-3-Clause"
readme = "README.md"
homepage = "https://github.com/sdss/fliswarm"
repository = "https://github.com/sdss/fliswarm"
documentation = "https://sdss-fliswarm.readthedocs.org"

requires-python = ">=3.10,<4"

dependencies = [
    "sdsstools>=1.9.1",
    "click>=8.0.0,<8.2.0",
    "docker>=5.0.0",
    "sdss-clu>=2.0.0",
    "click-default-group>=1.2.2",
    "numpy<2.0.0"
]

[project.scripts]
fliswarm = "fliswarm.__main__:main"

[dependency-groups]
dev = [
    "ipython>=8.0.0",
    "pytest>=5.2.2",
    "pytest-asyncio>=0.10.0",
    "pytest-cov>=2.8.1",
    "pytest-mock>=1.13.0",
    "pytest-sugar>=0.9.2",
    "coverage[toml]>=5.0",
    "ipdb>=0.12.3",
    "rstcheck>=3.3.1",
    "Sphinx>=8.0.0",
    "autopep8>=1.5.4",
    "sphinx-rtd-theme>=0.5.0",
    "sphinx-click>=6.0.0",
    "sphinx-copybutton>=0.3.1",
    "myst-parser>=0.14.0",
    "nox>=2021.6.12",
    "sphinx-autobuild>=2021.3.14",
    "sphinx-jsonschema>=1.16.11",
    "furo>=2025.7.19",
    "ruff>=0.12.5"
]

[tool.ruff]
line-length = 88
target-version = 'py312'

[tool.ruff.lint]
select = ["E", "F", "I"]
unfixable = ["F841"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F403", "E402", "F401"]

[tool.ruff.lint.isort]
known-first-party = ["fliswarm"]
lines-after-imports = 2
section-order = ["future", "standard-library", "typing", "third-party", "sdss", "first-party", "local-folder"]

[tool.ruff.lint.isort.sections]
typing = ["typing"]
sdss = ["sdsstools", "clu", "basecam", "flicamera"]

[tool.pytest.ini_options]
addopts = "--cov fliswarm --cov-report xml --cov-report html --cov-report term"
asyncio_mode = "auto"
filterwarnings = [
    "ignore:starting LegacyActor without Tron connection."
]

[tool.coverage.run]
branch = true
omit = [
    "*/__init__.py",
    "*/__main__.py"
]

[tool.coverage.report]
exclude_lines = [
]

[build-system]
requires = ["uv_build>=0.8.3,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""
module-name = "fliswarm"
